fix overflow

--- a/react-app/src/components/currentCoffe/currentCoffee.css
+++ b/react-app/src/components/currentCoffe/currentCoffee.css
@@ -1,6 +1,6 @@
 .user-coffee-container {
     max-width: 20%;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     display: flex;
     flex-direction: column;
 }
